--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "name": "__MSG_appName__",
   "description": "__MSG_appDesc__",
   "default_locale": "en",
-  "version": "0.1.1",
+  "version": "0.0.0",
   "manifest_version": 3,
   "icons": {
     "16": "logo.png",
@@ -10,7 +10,7 @@
     "48": "logo.png",
     "128": "logo.png"
   },
-  "host_permissions": ["https://*.openai.com/"],
+  "host_permissions": ["https://*.openai.com/", "https://*.google.com/"],
   "permissions": ["storage"],
   "background": {
     "service_worker": "background.js"
