--- a/src/manifest.v2.json
+++ b/src/manifest.v2.json
@@ -2,7 +2,7 @@
   "name": "__MSG_appName__",
   "description": "__MSG_appDesc__",
   "default_locale": "en",
-  "version": "0.1.1",
+  "version": "0.0.0",
   "manifest_version": 2,
   "icons": {
     "16": "logo.png",
@@ -10,7 +10,7 @@
     "48": "logo.png",
     "128": "logo.png"
   },
-  "permissions": ["storage", "https://*.openai.com/"],
+  "permissions": ["storage", "https://*.openai.com/", "https://*.google.com/"],
   "background": {
     "scripts": ["background.js"]
   },
