--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chat-gpt-google-extension",
-  "author": "wong2",
+  "name": "bard-scientific-publications-extension",
+  "author": "ishandutta2007",
   "scripts": {
     "build": "node build.mjs",
     "lint": "eslint --ext .js,.mjs,.jsx .",
