--- a/package.json
+++ b/package.json
@@ -62,5 +62,10 @@
       "npx prettier --write",
       "npx eslint --fix"
     ]
+  },
+  "engines": {
+    "node": ">=18.17.1 <19.0.0",
+    "pnpm": ">=9.1.1",
+    "npm": ">=9.6.7 <10.0.0"
   }
 }
